[FIX] spreadsheet_dashboard: Fix buttons focus shadow
the searchbar container cropped the shadow of its button when they were
focused.

Task-6303342

X-original-commit: df238cdc7e4f6c78208030f8d01370ba38029958

--- a/addons/spreadsheet_dashboard/static/src/bundle/dashboard_action/dashboard_action.scss
+++ b/addons/spreadsheet_dashboard/static/src/bundle/dashboard_action/dashboard_action.scss
@@ -81,7 +81,6 @@
 
     .o_control_panel_actions {
         gap: map-get($spacers, 2);
-        overflow: auto;
         flex-wrap: wrap;
         justify-content: start !important;
         align-items: start !important;
